# bevy-life-game

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Trunk.build.toml  cog.toml  index.html  justfile
.github/workflows/: bump.yml  ci.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
assets/shaders/: grid_material.wgsl
common/: Cargo.toml
common/src/: consts.rs  lib.rs  patterns.rs  resources.rs  states.rs  systems.rs  ui.rs
docs/: infinite-world-architecture.md
game-plugin/: Cargo.toml
game-plugin/src/: components.rs  events.rs  grid_material.rs  layer.rs  lib.rs  rendering.rs  resources.rs  states.rs  systems.rs
game-plugin/src/components/: action.rs  camera.rs  chunk.rs  coordinate.rs  mod.rs  screen.rs  slider.rs
game-plugin/src/resources/: cell_materials.rs  interaction.rs  mod.rs  simulation.rs  timer.rs  world.rs
game-plugin/src/systems/: action.rs  audio.rs  button_handler.rs  cell_operations.rs  chunk.rs  coordinate.rs  grid.rs  input.rs  mod.rs  screen.rs  slider.rs  ui.rs  viewport.rs
menu-plugin/: Cargo.toml
menu-plugin/src/: lib.rs
src/: main.rs
title-plugin/: Cargo.toml
title-plugin/src/: lib.rs
