[package]
name = "bevy-life-game"
version = "0.2.0"
edition.workspace = true

[workspace]
members = ["common", "game-plugin", "title-plugin", "menu-plugin"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
bevy = "0.18"
common = { path = "common" }

[dependencies]
bevy.workspace = true
bevy-inspector-egui = { version = "0.36", default-features = false }
common.workspace = true
game-plugin = { path = "game-plugin" }
title-plugin = { path = "title-plugin" }
menu-plugin = { path = "menu-plugin" }
