[package]
name = "bevy-life-game"
version = "0.2.0"
edition.workspace = true

[workspace]
members = ["common", "game-plugin", "title-plugin", "menu-plugin"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
bevy = "0.18"
common = { path = "common" }

[dependencies]
bevy.workspace = true
common.workspace = true
game-plugin = { path = "game-plugin" }
title-plugin = { path = "title-plugin" }
menu-plugin = { path = "menu-plugin" }
